--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -38,6 +38,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 --nav-item-display: inline-block;
 --nav-item-margin: 0 0 3rem 0;
 --nav-item-link-hover: var(--color-primary);
+--section-tagline-margin: 0;
 }
 *, *:before, *:after {
   box-sizing: border-box;
@@ -102,6 +103,7 @@ a:active {
  font-family: var(--font-family-title);
  text-transform: var(--section-tagline-transform);
  font-weight: var(--font-weight-bold);
+ margin: var(--section-tagline-margin);
 }
 .container {
   width: 960px;
@@ -134,4 +136,22 @@ a:active {
 }
 .nav .nav-link:hover {
   color: var(--nav-item-link-hover);
+}
+ul.row {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.col-1-3 {
+  width: 33.33%;
+  float: left;
+  padding: 0.5rem;
+}
+.col-1-2 {
+  margin: 0;
+  font-size: var(--font-size-small);
+  color: var(--text-color);
+}
+.footer ul {
+  text-align: right;
 }
