--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -148,6 +148,11 @@ ul.row {
   padding: 0.5rem;
 }
 .col-1-2 {
+  width: 50%;
+  float: left;
+  padding: 0.5rem;
+}
+.footer-copyright {
   margin: 0;
   font-size: var(--font-size-small);
   color: var(--text-color);
