--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -37,7 +37,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 --nav-item-letter-spacing: 0.04rem;
 --nav-item-display: inline-block;
 --nav-item-margin: 0 0 3rem 0;
---nav-item-link-hover: var(--color-primary);
+--nav-item-link-hover: var(--color-white);
 --section-tagline-margin: 0;
 --button-display: inline-block;
 --button-padding: 1.5rem 3rem;
@@ -163,7 +163,7 @@ a:active {
   padding: 0.5rem 1rem;
 }
 .nav .nav-link:hover {
-  color: var(--color-white);
+  color: var(--nav-item-link-hover);
 }
 .nav .nav-link::before {
   content: '';
